--- a/introduction_to_amazon_algorithms/jumpstart-foundation-models/instruction-fine-tuning-flan-t5.ipynb
+++ b/introduction_to_amazon_algorithms/jumpstart-foundation-models/instruction-fine-tuning-flan-t5.ipynb
@@ -67,12 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "ef9bf59d-f7fb-47e1-b2cf-7be6a819be96",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "distributed 2022.7.0 requires tornado<6.2,>=6.0.3, but you have tornado 6.3.3 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install sagemaker==2.166.0 --quiet"
    ]
@@ -89,12 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c83140fe-f5d2-49ee-a433-70109cf23bd5",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1maws_region:\u001b[0m us-east-1\n",
+      "\u001b[1maws_role:\u001b[0m arn:aws:iam::456552952783:role/cf-SageMakerExecutionRole-fncYaP7As1Zp\n",
+      "\u001b[1moutput_bucket:\u001b[0m sagemaker-us-east-1-456552952783\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "import sagemaker\n",
@@ -114,12 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "013de37d-0681-44e1-acce-0a854a5b6492",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------!"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.jumpstart.model import JumpStartModel\n",
     "\n",
@@ -131,12 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "10dcebc7-f7ac-4a9b-882b-2f83dca59186",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hf-text2text-flan-t5-base-2023-10-17-20-45-53-582\n"
+     ]
+    }
+   ],
    "source": [
     "print(pretrained_model.endpoint_name)\n",
     "pre_trained_name = pretrained_model.endpoint_name"
@@ -144,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "6a5c9b6b-7e38-4ad5-a757-4e202f9171be",
    "metadata": {
     "tags": []
@@ -158,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "59aa544a-368b-4fd5-9c31-0740a34041ff",
    "metadata": {
     "tags": []
@@ -178,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "421b7c0c-3a68-45dc-891b-d3ff2631f25a",
    "metadata": {
     "tags": []
@@ -200,12 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1846ed32-7bbf-425f-aabb-9e898b12700f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Understand the benefits of Amazon Comprehend. Understand the benefits of Amazon Comprehend.\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker import serializers\n",
     "\n",
@@ -260,12 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "96bb8fb1-84e1-43d3-981b-769856e1c204",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./train-v2.0.json']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sagemaker.s3 import S3Downloader\n",
     "\n",
@@ -302,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "3002bc68-2779-4fc0-a68b-cbdd0b3663bd",
    "metadata": {
     "tags": []
@@ -337,12 +395,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "0fc435de-a9c3-403e-a24a-f5ef032755cb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mtraining data:\u001b[0m s3://sagemaker-us-east-1-456552952783/train_data\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.s3 import S3Uploader\n",
     "\n",
@@ -372,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9a71087e-9c9e-42d7-999e-5f3fac07bc4a",
    "metadata": {
     "tags": []
@@ -385,8 +451,7 @@
     "    model_id=model_id,\n",
     ")\n",
     "\n",
-    "estimator.set_hyperparameters(instruction_tuned=\"True\", epoch=\"3\", max_input_length=\"1024\")\n",
-    "estimator.fit({\"training\": train_data_location})"
+    "estimator.set_hyperparameters(instruction_tuned=\"True\", epoch=\"3\", max_input_length=\"1024\")\n"
    ]
   },
   {
@@ -395,6 +460,28 @@
    "metadata": {},
    "source": [
     "Performance metrics such as training and validation loss can be accessed through CloudWatch during training. We can also fetch the most recent snapshot of metrics as follows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc18790f-4a19-40eb-b9f2-fe6478bfd4f3",
+   "metadata": {},
+   "source": [
+    "⚠️***Set the `run_finetuning` variable below to `True` to run fine-tuning. This is disabled by default as all accounts may not have access to accelerated compute instances needed for fine-tuning***. ⚠️"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5b66cdaf-0ea6-4259-8365-7a068db7b2d9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "run_finetuning = False\n",
+    "if run_finetuning is True:\n",
+    "    estimator.fit({\"training\": train_data_location})"
    ]
   },
   {
@@ -419,25 +506,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e607c9ea-efcf-4f90-89d7-71cf1f87ed93",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "copy: s3://fine-tuned-llms/flan-t5-ft-model.tar.gz to s3://sagemaker-us-east-1-456552952783/flan-t5-ft-model.tar.gz\n",
+      "---------!hf-text2text-flan-t5-base-2023-10-17-22-00-45-887\n"
+     ]
+    }
+   ],
    "source": [
-    "finetuned_predictor = estimator.deploy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "bd359f69-7e48-4962-88f6-38a9e090b489",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "if run_finetuning is True:\n",
+    "    finetuned_predictor = estimator.deploy()\n",
+    "else:\n",
+    "    # deploy an already available fine-tuned model\n",
+    "    sess = sagemaker.Session()\n",
+    "    bucket = sess.default_bucket()\n",
+    "    fine_tuned_model_data = f\"s3://{bucket}/flan-t5-ft-model.tar.gz\"\n",
+    "    !aws s3 cp s3://fine-tuned-llms/flan-t5-ft-model.tar.gz $fine_tuned_model_data\n",
+    "    \n",
+    "    model_id, model_version = \"huggingface-text2text-flan-t5-base\", \"*\"\n",
+    "    finetuned_model = JumpStartModel(model_id=model_id, model_data=fine_tuned_model_data)\n",
+    "    finetuned_predictor = finetuned_model.deploy()\n",
     "fine_tuned_name = finetuned_predictor.endpoint_name\n",
     "print(fine_tuned_name)"
    ]
@@ -1130,7 +1226,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.m5.large",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
