--- a/introduction_to_amazon_algorithms/jumpstart-foundation-models/instruction-fine-tuning-flan-t5.ipynb
+++ b/introduction_to_amazon_algorithms/jumpstart-foundation-models/instruction-fine-tuning-flan-t5.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ef9bf59d-f7fb-47e1-b2cf-7be6a819be96",
    "metadata": {
     "tags": []
@@ -77,9 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "distributed 2022.7.0 requires tornado<6.2,>=6.0.3, but you have tornado 6.3.3 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c83140fe-f5d2-49ee-a433-70109cf23bd5",
    "metadata": {
     "tags": []
@@ -113,8 +111,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[1maws_region:\u001b[0m us-east-1\n",
-      "\u001b[1maws_role:\u001b[0m arn:aws:iam::456552952783:role/cf-SageMakerExecutionRole-fncYaP7As1Zp\n",
-      "\u001b[1moutput_bucket:\u001b[0m sagemaker-us-east-1-456552952783\n"
+      "\u001b[1maws_role:\u001b[0m arn:aws:iam::330777164251:role/cfn-SageMakerExecutionRole-qQ2n6gaG0wSe\n",
+      "\u001b[1moutput_bucket:\u001b[0m sagemaker-us-east-1-330777164251\n"
      ]
     }
    ],
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "013de37d-0681-44e1-acce-0a854a5b6492",
    "metadata": {
     "tags": []
@@ -147,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------!"
+      "-----------!"
      ]
     }
    ],
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "10dcebc7-f7ac-4a9b-882b-2f83dca59186",
    "metadata": {
     "tags": []
@@ -172,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hf-text2text-flan-t5-base-2023-10-17-20-45-53-582\n"
+      "hf-text2text-flan-t5-base-2023-10-19-22-53-16-727\n"
      ]
     }
    ],
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6a5c9b6b-7e38-4ad5-a757-4e202f9171be",
    "metadata": {
     "tags": []
@@ -197,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "59aa544a-368b-4fd5-9c31-0740a34041ff",
    "metadata": {
     "tags": []
@@ -217,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "421b7c0c-3a68-45dc-891b-d3ff2631f25a",
    "metadata": {
     "tags": []
@@ -239,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1846ed32-7bbf-425f-aabb-9e898b12700f",
    "metadata": {
     "tags": []
@@ -307,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "96bb8fb1-84e1-43d3-981b-769856e1c204",
    "metadata": {
     "tags": []
@@ -319,7 +317,7 @@
        "['./train-v2.0.json']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3002bc68-2779-4fc0-a68b-cbdd0b3663bd",
    "metadata": {
     "tags": []
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0fc435de-a9c3-403e-a24a-f5ef032755cb",
    "metadata": {
     "tags": []
@@ -405,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mtraining data:\u001b[0m s3://sagemaker-us-east-1-456552952783/train_data\n"
+      "\u001b[1mtraining data:\u001b[0m s3://sagemaker-us-east-1-330777164251/train_data\n"
      ]
     }
    ],
@@ -438,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9a71087e-9c9e-42d7-999e-5f3fac07bc4a",
    "metadata": {
     "tags": []
@@ -472,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "5b66cdaf-0ea6-4259-8365-7a068db7b2d9",
    "metadata": {
     "tags": []
@@ -506,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "e607c9ea-efcf-4f90-89d7-71cf1f87ed93",
    "metadata": {
     "tags": []
@@ -516,8 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "copy: s3://fine-tuned-llms/flan-t5-ft-model.tar.gz to s3://sagemaker-us-east-1-456552952783/flan-t5-ft-model.tar.gz\n",
-      "---------!hf-text2text-flan-t5-base-2023-10-17-22-00-45-887\n"
+      "---------!hf-text2text-flan-t5-base-2023-10-19-23-11-48-221\n"
      ]
     }
    ],
@@ -528,9 +525,7 @@
     "    # deploy an already available fine-tuned model\n",
     "    sess = sagemaker.Session()\n",
     "    bucket = sess.default_bucket()\n",
-    "    fine_tuned_model_data = f\"s3://{bucket}/flan-t5-ft-model.tar.gz\"\n",
-    "    !aws s3 cp s3://fine-tuned-llms/flan-t5-ft-model.tar.gz $fine_tuned_model_data\n",
-    "    \n",
+    "    fine_tuned_model_data = \"s3://fine-tuned-llms/flan-t5-ft-model.tar.gz\"    \n",
     "    model_id, model_version = \"huggingface-text2text-flan-t5-base\", \"*\"\n",
     "    finetuned_model = JumpStartModel(model_id=model_id, model_data=fine_tuned_model_data)\n",
     "    finetuned_predictor = finetuned_model.deploy()\n",
@@ -556,12 +551,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f7a0c4d9-dc5f-4fdd-9175-05f584ebbc73",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What does Amazon Comprehend use to extract insights about the content of documents?\n"
+     ]
+    }
+   ],
    "source": [
     "parameters = {\n",
     "    \"max_length\": 40,  # restrict the length of the generated text\n",
@@ -592,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "99076e38-16db-4b77-9545-d21796af4ab9",
    "metadata": {
     "tags": []
